# coursedSQL

./: README.md  main.py  pyproject.toml
DB_classes_and_config/: Data_Base_Creator.py  Data_Base_Manager.py  config.py  database.ini
Employers_parser/: Employers_Parser.py
Vacancies_parser/: Vacancies_Parser.py
interface_utils/: utils.py
